--- a/index.html
+++ b/index.html
@@ -1,13 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Juego Disparos</title>
 </head>
 <body>
-    <div class="container" id="container"></div>
+
+    <div id="temporizador">
+        <p id="timer">10</p>
+    </div>
+
+    <div id="pistola">
+        <img src="img/pistolabrazo.png" id="pistolaImg">
+    </div>
+
+   <!-- Contenedor para los enemigos -->
+   <div id="enemigos"></div>
+
 </body>
 <script src="script.js"></script>
 </html>
