contador de puntos
cambiamos el nombre de los enimgos y añadimos un contadore de puntos asociado a cada bala que damos

--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
         <p id="timer">10</p>
     </div>
 
+    <div id="puntos">
+        <p>Puntos: 0</p>
+    </div>
+
     <div id="pistola">
         <img src="img/pistolabrazo.png" id="pistolaImg">
     </div>
