actualizacion de contadore y temporizador

--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
 <body>
 
     <div id="temporizador">
-        <p id="timer">10</p>
+        <h1 id="timer">10</h1>
     </div>
 
     <div id="puntos">
-        <p>Puntos: 0</p>
+        <h1 id="contadorPuntos">Puntos: 0</h1>
     </div>
 
     <div id="pistola">
-        <img src="img/pistolabrazo.png" id="pistolaImg">
+        <img src="imganesnoenemigo/pistolabrazo.png" id="pistolaImg">
     </div>
 
    <!-- Contenedor para los enemigos -->
